@@ -4,6 +4,9 @@ icu (1.6.0.1-20001027-1) unstable; urgency=low
     /usr/share.
   * Move convrtrs.txt into /etc/icu, make it a conffile, and generate
     /usr/lib/icu/1.6.0.1/cnvalias.dat from it at postinst time.
+  * Manage a /usr/lib/icu/current symbolic link across installations
+    of the libicuXX packages. The symlink will always point to the
+    highest numbered version of ICU.
 
  -- Yves Arrouye <yves@debian.org>  Tue, 26 Oct 2000 11:14:22 -0700
 
